web-interface/style.css
body {
  font-family: Roboto, sans-serif;
  margin: 0;
  padding: 0;
  overflow: auto;
}

body.play {
  overflow-y: scroll;
}

#splash {
  background-color: black;
  color: white;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  box-sizing: border-box;
  margin: 0;
  padding: 2vh 2vw;
  height: 100vh;
  width: 100vw;

  overflow: hidden;
  user-select: none;

  position: relative;
}

#splash .fade-in-fade-out {
  opacity: 0;
  animation-name: fadeInFadeOut;
  animation-iteration-count: 1;
  animation-timing-function: ease-in;
  animation-duration: 8s;
  position: absolute;
  text-align: center;
}

#splash .logo {
  animation-delay: 0s;
}

#splash .logo img {
  min-width: 100px;
  max-width: 90vw;
  max-height: 90vh;
}

#splash .cover {
  animation-delay: 9s;
}

#splash .cover img {
  min-width: 100px;
  max-width: 90vw;
  max-height: 81vh;
}

#splash .author {
  font-size: 5vh;
  margin: 1vh 0;
}

#splash .version {
  font-size: 3vh;
  margin: 1vh 0;
}

#splash .inform {
  font-size: 2vh;
  margin: 1vh 0;
}

@keyframes fadeInFadeOut {
  0% {
    opacity: 0;
  }
  25% {
    opacity: 1;
  }
  75% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

#backgroundMusic {
  display: none;
}
#noMusic {
  display: none;
}

#vorple, #uiblock, #menus{
  display: none;
}
body.play #vorple, body.play #uiblock, body.play #menus {
  display: block;
}
body.play #splash {
  display: none;
}

body[data-auto-complete="false"] #auto-complete {
  visibility: hidden;
}

